WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37699
[Qt] WebKit compilation fails with --3d-canvas
https://bugs.webkit.org/show_bug.cgi?id=37699
Summary
[Qt] WebKit compilation fails with --3d-canvas
Jarkko Sakkinen
Reported
2010-04-16 00:01:00 PDT
GraphicsContext3D.h API has suddenly changed from PassRefPtr<WebGLArray> readPixels(long x, long y, unsigned long width, unsigned long height, unsigned long format, unsigned long type) to void readPixels(long x, long y, unsigned long width, unsigned long height, unsigned long format, unsigned long type, void* data).
Attachments
Changes to readPixels()
(1.83 KB, patch)
2010-04-16 00:12 PDT
,
Jarkko Sakkinen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jarkko Sakkinen
Comment 1
2010-04-16 00:12:15 PDT
Created
attachment 53519
[details]
Changes to readPixels()
Jarkko Sakkinen
Comment 2
2010-04-16 00:58:38 PDT
Simon, can you go through this?
WebKit Commit Bot
Comment 3
2010-04-16 14:27:13 PDT
Comment on
attachment 53519
[details]
Changes to readPixels() Clearing flags on attachment: 53519 Committed
r57745
: <
http://trac.webkit.org/changeset/57745
>
WebKit Commit Bot
Comment 4
2010-04-16 14:27:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug