2010-04-16  Jarkko Sakkinen  <jarkko.j.sakkinen@gmail.com>

Reviewed by Simon Hausmann.

        [Qt] WebKit compilation fails with --3d-canvas
        https://bugs.webkit.org/show_bug.cgi?id=37699

        API for readPixels() has been changed.

        * platform/graphics/qt/GraphicsContext3DQt.cpp:
        (WebCore::GraphicsContext3D::readPixels):

Canonical link: https://commits.webkit.org/49029@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57745 268f45cc-cd09-0410-ab3c-d52691b4dbfc